--- a/tmpl/methodTemplate.html
+++ b/tmpl/methodTemplate.html
@@ -23,7 +23,7 @@
 						<a href="flip">flip</a>
 					</li>
 					<li>
-						<a href="seqFlip">seqFlip</a>
+						<a href="seqflip">seqFlip</a>
 					</li>
 					<li>
 						<a href="filter">filter</a>
