fix wrong words
fix option type description

--- a/tmpl/options.html
+++ b/tmpl/options.html
@@ -27,7 +27,7 @@
 					</p>
 					<div class="format">
 						default: 3<br />
-						options: integer
+						type: integer
 					</div>
 				</li>
 				<li class="options">
@@ -37,7 +37,7 @@
 					</p>
 					<div class="format">
 						default: 3<br />
-						options: integer
+						type: integer
 					</div>
 				</li>
 				<li class="options">
@@ -47,7 +47,7 @@
 					</p>
 					<div class="format">
 						default: '' (blank string)<br />
-						options: string
+						type: string
 					</div>
 				</li>
 				<li class="options">
@@ -60,7 +60,7 @@
 					</p>
 					<div class="format">
 						default: null<br />
-						options: float
+						type: float
 					</div>
 				</li>
 				<li class="options">
@@ -71,7 +71,7 @@
 					</p>
 					<div class="format">
 						default: true if the browser supports CSS3 features or else false.<br />
-						options: boolean
+						type: boolean
 					</div>
 				</li>
 			</ul>
