--- a/tmpl/methods/setorigin.html
+++ b/tmpl/methods/setorigin.html
@@ -21,7 +21,7 @@
 		Passing 'each' keyword, the transform-origin of all of 'isActive' tiles will be set to the center of its own. <br />
 		Passing 'centerOfAll' keyword, the transform-origin of all of 'isActive' tiles will be set to the center of the area.<br />
 		Passing 'centerOfRow' keyword, the transform-origin of all of 'isActive' tiles will be set to the center of the row it belongs.<br />
-		Passing 'centerOfRow' keyword, the transform-origin of all of 'isActive' tiles will be set to the middle of the col it belongs.<br />
+		Passing 'middleOfCol' keyword, the transform-origin of all of 'isActive' tiles will be set to the middle of the col it belongs.<br />
 		Passing something else, .setOrigin() method does not do anything.<br />
 		'isActive' is the attribute that represents the state of the tile. In the state immediately after construction of Tilamic object, all of its tiles are 'isActive'.For more information about 'isActive' see the <a href="filter">.filter()</a> method.
 	</p>
